2008-04-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgutil.h:
	- GLIST2ARYF -> GLIST2ARY_WITH_FREE.
	- GSLIST2ARYF -> GSLIST2ARY_WITH_FREE.

	* src/rbgobject.h: remove nonexistent
	rbg_{set,remote}_internal_poll_func.

2008-04-05  Sjoerd Simons <sjoerd@luon.net>
	* src/rbgutil_callback.c: Create the pipe inside
	rbgutil_start_callback_dispatch_thread to ensure it's created in a race-free
	way

2008-04-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/glib2.def: follow the recent changes.

	* extconf.rb, src/rbgutil_callback.c: use pipe() for communicating
	threads.

	* src/rbglib_bookmarkfile.c (bf_load_from_data): don't declare
	variable after some expression.

2008-04-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (CSTR2RVAL2), src/lib/glib2.rb: cleanup.

2008-03-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (RVAL2CSTR_ACCEPT_NIL): renamed from RVAL2CSTR2.

	* src/glib2.def: exported rbgobj_get_ruby_object_from_gobject.

2008-03-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobject.h (GOBJ2RVAL_UNREF): renamed from GOBJ2RVALU().

	* src/rbgobj_object.c, src/rbgobj_param.c, src/rbgprivate.h:
	get_value -> get_ruby_object.

	* src/rbgobject.c: followed the above changes.

	* src/rbgobject.h: exported rbgobj_get_ruby_object_from_gobject().

2008-03-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (CSTR2RVAL_FREE): renamed from CSTR2RVAL2.

2008-03-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgutil_callback.c (rbgutil_protect):
	- passed exception.
	- fixed missing type conversion.

	* src/lib/glib2.rb (GLib.exit_application): received exception.

2008-03-20  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_unicode.rb: fixed duplicated name.

	* test/run-test.rb: $VERBOSE = true.

	* src/rbgobj_enums.c, src/rbglib_error.c: used g_ascii_toupper()
	instead of toupper() to be locale independent. [Bug #1901843]
	Reported by Joseph Method. Thanks!!!

2008-03-15  Kouhei Sutou  <kou@cozmixng.org>
